Login widget and navigation

--- a/module/GGACLoLTournament/view/ggac-lo-l-tournament/index/kontakt.phtml
+++ b/module/GGACLoLTournament/view/ggac-lo-l-tournament/index/kontakt.phtml
@@ -1,4 +1,5 @@
 <?php
+$this->loginWidget(true)->setRedirect('kontakt');
 $position = $this->position;
 
 echo $this->contentBlock()->renderPosition($position, 'ggac-lo-l-tournament/index/partial/index_blocks');
