--- a/module/GGACLoLTournament/view/layout/ggaclol.phtml
+++ b/module/GGACLoLTournament/view/layout/ggaclol.phtml
@@ -39,6 +39,7 @@
 		<div id="body">
 			<div>
 				<div>
+					<?php echo $this->loginWidget()->render(); ?>
 		            <?php echo $this->content; ?>
 				</div>
 			</div>
