--- a/module/GGACTournament/view/ggac-tournament/user-report/index.phtml
+++ b/module/GGACTournament/view/ggac-tournament/user-report/index.phtml
@@ -27,6 +27,8 @@ $teamdataManager = $this->teamdataManager;
 $resultFormGenerator = $this->resultFormGenerator;
 $timeFormGenerator = $this->timeFormGenerator;
 $matchId = $this->match_id;
+
+$this->loginWidget(true)->setRedirect('registration');
 ?>
 <div class="anmeldung ergebnisse">
 	<div class="content">
