--- a/module/GGACTournament/view/ggac-tournament/team/teams.phtml
+++ b/module/GGACTournament/view/ggac-tournament/team/teams.phtml
@@ -18,11 +18,11 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
 
+$this->loginWidget(true)->setRedirect('teams'); 
 ?>
 <div class="anmeldung teams">
 	<div class="content">
 		<ul>
-			<?php echo $this->partial('partial/loginForm.phtml', array('loginForm' => $this->loginForm, 'formAction' => $this->url('teams'))) ?>
 			<?php
 				/* @var $tournament \GGACTournament\Entity\Tournament */
 				$tournament = $this->tournament;
