--- a/public/less/style/template.less
+++ b/public/less/style/template.less
@@ -342,6 +342,58 @@ body {
 				padding: 0 9px 22px 9px;
 				width: 940px + 2*9px;
 				
+				&.loginWidget{
+					background: none;
+					padding-bottom: 0;
+					
+					form input{
+						border: 1px solid #22272a;
+						background-color: #7e7e7e;
+						color: black;
+						width: 100%;
+						
+						&::-webkit-input-placeholder,
+						&:-moz-placeholder,
+						&::-moz-placeholder,
+						&:-ms-input-placeholder,
+						&:placeholder-shown{ /* WebKit, Blink, Edge */
+							color:    #eee;
+							opacity:  1;
+						}
+					}
+					
+					& > div:first-child > div{
+						padding-bottom: 14px;
+					}
+					
+					ul{
+						list-style: none;
+						padding: 0;
+						margin: 0;
+						.clearfix();
+						li {
+							display: block;
+							float: left;
+							border-right: 1px solid #727272;
+							padding: 0 10px;
+							&:last-child{
+								border-right: none;
+								padding-right: 0px;
+							}
+							&:first-child{
+								padding-left: 0px;
+							}
+							
+							a {
+								color: #727272;
+								&.active{
+									text-decoration: underline;
+								}
+							}
+						}
+					}
+				}
+				
 				& > div {
 					background: url(../img/border.gif) repeat-x top left;
 					float: left;
@@ -789,127 +841,6 @@ body {
 				}
 			}
 		}
-		.loginForm{
-			background: url(../img/border.gif) repeat-x top left;
-			float: left;
-			margin: 0 0 0 20px;
-			padding: 3px 0 0;
-			width: 920px;
-			ul {
-				border: none;
-				background-color: transparent;
-				li {
-					border: none;
-					padding: 0 0 20px;
-					.header{
-						background: #070707 url(../img/gradient5.png) repeat-x top center;
-						border: 1px solid #22272a;
-						color: #fff;
-						font-size: 14px;
-						line-height: 24px;
-						margin: 0 0 1px;
-						overflow: hidden;
-						padding: 10px 18px 15px;
-						
-						b {
-							display: inline;
-							float:left;
-							line-height: 24px;
-							margin: 0;
-							padding: 0;
-							
-							a {
-								color: #fff;
-								
-								&:hover{
-									color: #727272;
-								}
-							}
-						}
-						
-						span {
-							background: #181818;
-							border: 1px solid #22272a;
-							border-radius: 4px;
-							display: inline;
-							float: left;
-							margin: 0 0 0 34px;
-							overflow: hidden;
-							padding: 0;
-							
-							a {
-								color: #bababa;
-								display: block;
-								float: left;
-								font-size: 10px;
-								height: 23px;
-								line-height: 23px;
-								margin: 0;
-								padding: 0 15px;
-								text-align: center;
-								text-decoration: none;
-								text-transform: capitalize;
-								
-								&:first-child{
-									border-right: 1px solid #22272a;
-								}
-								
-								&:hover{
-									color: #fff;
-								}
-							}
-						}
-					}
-					
-					.article {
-						background: #181818;
-						border: 1px solid #22272a;
-						margin: 0;
-						overflow: hidden;
-						padding: 14px 19px 19px;
-						
-						a.figure{
-							.figure_link();
-							float: left;
-							margin: 6px 20px 0 0;
-						}
-						
-						p {
-							line-height: 18px;
-							margin-bottom: 8px;
-							
-							a{
-								&.more{
-									background: url("../img/bg-more.png") no-repeat center center;
-									color: #bababa;
-									display: inline-block;
-									font-size: 10px;
-									font-weight: normal;
-									height: 23px;
-									line-height: 22px;
-									margin: 0;
-									padding: 0;
-									text-align: center;
-									text-decoration: none;
-									text-transform: lowercase;
-									width: 70px;
-									
-									&:hover{
-										color: #fff;
-									}
-								}
-							}
-						}
-						
-						form input{
-							border: 1px solid #22272a;
-							background-color: #7e7e7e;
-							color: black;
-						}
-					}
-				}
-			}
-		}
 	}
 	
 	.about {
@@ -1230,6 +1161,14 @@ body {
 				border: 1px solid #22272a;
 				background-color: #7e7e7e;
 				color: black;
+				&::-webkit-input-placeholder,
+				&:-moz-placeholder,
+				&::-moz-placeholder,
+				&:-ms-input-placeholder,
+				&:placeholder-shown{ /* WebKit, Blink, Edge */
+					color:    #eee;
+					opacity:  1;
+				}
 			}
 
 			input[type=file]{
