--- a/module/GGACTournament/view/partial/loginForm.phtml
+++ b/module/GGACTournament/view/partial/loginForm.phtml
@@ -17,7 +17,7 @@ if(!empty($this->redirectRoute)){
 	$form->add(array(
 		'name' => 'redirect',
 		'type' => 'Hidden',
-		'attribtes' => array(
+		'attributes' => array(
 			'value' => $this->redirectRoute,
 		),
 	));
