--- a/module/GGACTournament/view/ggac-tournament/user-report/index.phtml
+++ b/module/GGACTournament/view/ggac-tournament/user-report/index.phtml
@@ -100,6 +100,12 @@ $this->loginWidget(true)->setRedirect('registration');
 										));
 											?>
 											<div class="match-forms">
+												<div class="match-form">
+													<h3>Tournament Codes</h3>
+													<?php foreach($match->getGames() as $game): /* @var $game \GGACTournament\Entity\Game */ ?>
+													<p><b>Spiel <?php echo $game->getNumber() ?></b> <?php echo $game->getTournamentCode() ?></p>
+													<?php endforeach; ?>
+												</div>
 												<?php
 													$form = call_user_func($timeFormGenerator, $match);
 													if($form):
