--- a/module/GGACLoLTournament/view/layout/ggaclol.phtml
+++ b/module/GGACLoLTournament/view/layout/ggaclol.phtml
@@ -48,7 +48,7 @@
 			<div>
 				<ul>
 					<li id="facebook"> <!-- Turniergruppe -->
-						<a target="_blank" href="https://www.facebook.com/groups/783094445105479/">facebook</a>
+						<a target="_blank" href="https://www.facebook.com/groups/202575866781327/">facebook</a>
 					</li>
 					<li id="googleplus"> <!-- RWTHGG Facebookseite -->
 						<a target="_blank" href="https://www.facebook.com/rwthgg">RWTH Gaming Group</a>
@@ -56,9 +56,9 @@
 					<!--<li id="bitstars">
 						<a target="_blank" href="http://www.bitstars.com">Bitstars</a>
 					</li>-->
-					<li id="fachschaft">
+					<!--li id="fachschaft">
 						<a target="_blank" href="http://www.fsmpi.rwth-aachen.de">Fachschaft</a>
-					</li>					
+					</li-->					
 				</ul>
 				<p>
 					Events managed by the RWTH Gaming Group, the RWTH Gaming Group itself and this page are not endorsed by Riot Games and do not reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.
